--- a/app/checklist/checklist.module.css
+++ b/app/checklist/checklist.module.css
@@ -36,17 +36,23 @@
     list-style-type: none;
     padding: 15px 0;
     width: 100%;
-    max-width: 600px;
+    max-width: 50%;
   }
   
   .taskItem {
+    height: 65px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 10px 10px 10px 20px;
     background-color: #fafaf7;
     margin-bottom: 20px;
     border-radius: 10px;
+  }
+
+  .checkbox {
+    width: 20px;
+    height: 20px;
   }
   
   .taskLabel {
