--- a/app/checklist/checklist.module.css
+++ b/app/checklist/checklist.module.css
@@ -1,12 +1,13 @@
 .container {
   padding: 0 2rem;
+  background-color: #f0f0eb;
 }
 
 .minorContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 20px 20px 60px 20px;
     font-family: Arial, sans-serif;
   }
   
@@ -84,5 +85,105 @@
   
   .proceedButton:hover {
     background-color: #005bb5;
+  }
+
+  .newTaskContainer {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+  }
+  
+  .textarea {
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    background-color: #fff;
+  }
+  
+  .buttonContainer {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+  }
+  
+  .saveButton,
+  .cancelButton {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .saveButton {
+    background-color: #4747ff;
+    color: white;
+  }
+  
+  .cancelButton {
+    background-color: #f8f9fa;
+    color: #212529;
+    border: 1px solid #ced4da;
+  }
+  
+  .saveButton:hover {
+    background-color: #005bb5;
+  }
+  
+  .cancelButton:hover {
+    background-color: #e2e6ea;
+  }
+  
+  .createTaskButton {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .createTaskButton:hover {
+    background-color: #0056b3;
+  }
+
+  .moreButton {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 0;
+    position: relative;
+  }
+  
+  .menu {
+    position: absolute;
+    top: 30px; /* Adjust as needed */
+    right: 0;
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+  }
+  
+  .menuItem {
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    background: none;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+  }
+  
+  .menuItem:hover {
+    background-color: #f0f0f0;
   }
   
