--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -1,33 +1,67 @@
 .container {
     padding: 0 2rem;
-    background-color: #fafaf7;
+    background-color: #f0f0eb;
   }
   
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 0;
+    padding: 1rem 2rem 1rem 2rem;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #f0f0eb;
+    z-index: 1000; 
   }
   
 .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.25rem;
     text-decoration: none;
     font-weight: bold;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.2rem;
     text-transform: uppercase;
     font-size: 1.25rem;
   }
 
 .logoImage {
-  max-height: 50px;
-  max-width: 50px;
+  max-height: 30px;
+  max-width: 30px;
 }
 
-  
+.logoText {
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.header.scrolled .logoText {
+  animation: moveLeft 0.3s forwards;
+}
+
+.logoText:not(.header.scrolled .logoText) {
+  animation: moveRight 0.3s forwards;
+}
+
+@keyframes moveLeft {
+  to {
+    transform: translateX(-20px); /* Adjust this value as needed */
+    opacity: 0;
+  }
+}
+
+@keyframes moveRight {
+  from {
+    transform: translateX(-20px); /* Match the value used in moveLeft */
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 .loginButton {
     background-color: transparent;
     border: 1px solid #000;
@@ -45,6 +79,7 @@
 .title {
     margin-bottom: 2rem;
     font-size: 2rem;
+    font-weight: 500;
   }
   
 .grid {
