changed event template: checklist. added labels and showing of labels

--- a/app/checklist/checklist.module.css
+++ b/app/checklist/checklist.module.css
@@ -56,9 +56,19 @@
     height: 20px;
   }
   
-  .taskLabel {
+  .taskLabelContainer {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+  }
+  
+  .taskText {
+    font-size: 16px; 
+    color: #000000; 
+  }
+  
+  .taskLabel {
+    font-size: 12px; 
+    color: #888888; 
   }
   
   .taskLabel input {
