--- a/app/checklist/checklist.module.css
+++ b/app/checklist/checklist.module.css
@@ -65,6 +65,16 @@
     font-size: 16px; 
     color: #000000; 
   }
+
+  .input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
   
   .taskLabel {
     font-size: 12px; 
@@ -102,6 +112,9 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    border: 0.5px solid #ccc;
+    border-radius: 10px;
+    padding: 5px;
   }
   
   .textarea {
