--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -92,6 +92,7 @@
     margin-bottom: 50px;
   }
   
+
 .card {
   background: #fff;
   margin: 15px;
@@ -99,6 +100,12 @@
   border-radius: 20px;
   text-align: left;
   max-width: 300px;
+  transition: max-width 0.5s ease;
+}
+
+.card:hover {
+  max-width: 305px;
+  border-radius: 10px;
 }
 
 .cardInside {
